# DS-Proj2

./: .gitignore  CMakeLists.txt  KAry.cpp  KAry.hpp  KAryTest.cpp  README.md  main.cpp
.github/workflows/: test.yml
